--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,10 +5,12 @@ on:
     branches:
       - main
       - 6.2.workflow
+      - cicd_deploy
   pull_request:
     branches:
       - main
       - 6.2.workflow
+      - cicd_deploy
 
 jobs:
   build:
