--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -6,11 +6,13 @@ on:
       - main
       - 6.2.workflow
       - cicd_deploy
+      - publish
   pull_request:
     branches:
       - main
       - 6.2.workflow
       - cicd_deploy
+      - publish
 
 jobs:
   build:
@@ -84,9 +86,10 @@ jobs:
         name: html-coverage-report
         path: ./coverage-html/
 
-  deploy:
+  publish:
     runs-on: ubuntu-latest
     needs: test
+    if: ${{ github.ref_name == 'publish' }}
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -95,12 +98,20 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: '8.0.100'
-
-    - name: Build the project
-      run: dotnet publish --configuration Release --output ./api/bin/Release/net8.0/publish
-
-    - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@v4
+    
+    - name: Restore dependencies
+      run: dotnet restore
+    
+    - name: Dotnet publish
+      run: dotnet publish -c Publish -r linux-x64 --self-contained -o ./publish
+    
+    - name: Upload Linux x64 published artifact
+      uses: actions/upload-artifact@v4
       with:
-        branch: cicd_deploy
-        folder: ./api/bin/Release/net8.0/publish
+        name: linux-artifact
+        path: ./publish
+
+
+        //delivery
+        //betsand leesbaar maakt
+        //code coverage
